*gitlab-ce-9.4.0 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-9.4.0-database.yml.patch, +gitlab-ce-9.4.0.ebuild,
  gitlab-ce-9.4.0_rc6.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 9.4.0 and update dev versions

*gitlab-ce-9.4.0_rc6 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.4.0_rc6.ebuild,
  -gitlab-ce-9.3.0_rc2.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Update dev versions of gitlab-ce

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.12.ebuild,
  gitlab-ce-9.1.9.ebuild, gitlab-ce-9.2.9.ebuild, gitlab-ce-9.3.9.ebuild:
  www-apps/gitlab-ce:  Fix build errors due to missing dependency on dev-
  libs/re2

*gitlab-ce-9.3.9 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.3.9.ebuild,
  -gitlab-ce-9.3.5.ebuild:
  www-apps/gitlab-ce:  Update Gitlab 9.3.5 -> 9.3.9

*gitlab-ce-9.2.9 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.2.9.ebuild,
  -gitlab-ce-9.2.7.ebuild:
  www-apps/gitlab-ce:  Update Gitlab 9.2.7 -> 9.2.9

*gitlab-ce-9.1.9 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.1.9.ebuild,
  -gitlab-ce-9.1.7.ebuild:
  www-apps/gitlab-ce:  Update Gitlab 9.1.7 -> 9.1.9

*gitlab-ce-9.0.12 (25 Jul 2017)

  25 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.12.ebuild,
  -gitlab-ce-9.0.10.ebuild:
  www-apps/gitlab-ce:  Update Gitlab 9.0.10 -> 9.0.12

  16 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.10.ebuild,
  gitlab-ce-9.1.7.ebuild, gitlab-ce-9.2.7.ebuild, gitlab-ce-9.3.0_rc2.ebuild,
  gitlab-ce-9.3.5.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Switch to EAPI 6; this resolves #47.

  10 Jul 2017; Jerzy Kołosowski <jerzy@kolosowscy.pl> gitlab-ce-9.2.7.ebuild,
  gitlab-9.3.5.ebuild:
  www-apps/gitlab-ce:  Fix libgit dependencies

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild: