@@ -22,12 +22,12 @@ DIST gitlab-ce-9.2.9.tar.gz 30992595 SHA256 ce6fc7d908bc5348734c0519c3d976f29fac
 DIST gitlab-ce-9.3.9.tar.gz 31766776 SHA256 1ea93e0031ce57e1fcc4bab4809a989376717b2d81b37bd9cd70c0d51f2e042e SHA512 8cb5ad4b03a9ae266150f84305953886e877241e846cd0fc84b619c0137b30ed1cd7aa5017c5e496e28e30a866a5c8d13e3f4ba6b4cd1449becf0a2290bc61b9 WHIRLPOOL 58dc164054a420fb134dc9a837982aa83428199da5d6cd9ba15a000c42ddbe8936bd2420d7d0a2272751f33885f65d005bd3cb306cf4bcb6e3dddb58b8204f06
 DIST gitlab-ce-9.4.0.tar.gz 32800286 SHA256 ee6873a626a150c21e74fef4c97cb70947d3442ffb78b40aa9031d3d4b4a346f SHA512 325ab189679687ca6861667d20412a0e585025cb9b3cc149cabbd15f58ff3bc0310113b3774fadaf068618e2699c4e7dac1f20b3df51845964a0d35b215afa9a WHIRLPOOL 1c10f35e45d7b0053fec4f5e93319fd766c56cd1dfadee36cb80a4fe936706486c402a0ab098fc5d053e4dc2810cc821f85468ee54c9f5d3fc59609ccabead28
 DIST gitlab-ce-9.4.0_rc6.tar.gz 32810524 SHA256 4cd8ae890bbe2b90047078c6d61fd29c8c62e8aa0059d97ca14db81b68ea64f2 SHA512 b8aeaa3f017b47c3455885c57fc21da8fc393ce6258de6813f0c7104f7dc725ffd3800c22d480ed19aa553c7d1040a4006dbd923cb6a1f3cdd685b17ee21afc0 WHIRLPOOL dd583d05f6937612e9a34980c558030bed266f2a0f50a2d9977c23a4cb8fcbfcfc71a3157c846250a02091688333c5b76ccdeec2a9f3e5a23af715caa7d58f05
-EBUILD gitlab-ce-9.0.12.ebuild 13079 SHA256 8d0d7ed4d3bc3049d45c86743742354827f811bdeb81cb5370713d115b5f2453 SHA512 9420cd9d0138d23a96e15d4ce0f21d265804eb78fc4724708f20f4c153cbc0942940a0bc646492eb143fd2f7870b9b0c767d51974bf5d070be37431e87135070 WHIRLPOOL 9a69b3c796dfcd5845583b217375ab354b5fbf707261b3407d4bc215ab91e646539759986a0b321409513c4c19ed4994054677fe10340fcb50706d72e78e3e49
-EBUILD gitlab-ce-9.1.9.ebuild 13235 SHA256 b97e426661b11c52432bd4a47faa7e96867fc09cf7c8f25c227c96d3e3a5102e SHA512 5fe79ff6cbd48915fa8906cb41b2d1d29a908339943c24cd34870d8368c589990fce2c3f7844e0898b952558a85f527d5e5f04cb15db3f8afd310014610dda39 WHIRLPOOL 1fae0a60762a707144911101bca134fcc5da990b42b0afd9d0ac439557885f7548c0088852a5492706355d80b3c57166d591b5e195d43676d10f0ecf5273ad8a
-EBUILD gitlab-ce-9.2.9.ebuild 12980 SHA256 a3722674324dbb418d379f326865eb03125555d631f34079193b12ba77878d8a SHA512 53094a4ccd6635df51fb45618e6eb9f2904e0939cb40685135a9165a45712112d0d5d527da6626e9096234e64ef0620dc774e58515ab48baa7754163736cdeeb WHIRLPOOL eca9905ee808983b1a72f8907f5d969f2ed273bd707e5948edb2192fa2603d4f0aeafedb24339f00a9daa4eb8e5dadfbe2ba2c64a1b97f50abe9232ae8d37953
-EBUILD gitlab-ce-9.3.9.ebuild 13639 SHA256 039ba276fb5c3ba71c04d830b90781457ae1e8ae855f1454b3309b8e3c477bc1 SHA512 ab7add79547b10908253460a27e1a733128323e304b64e0a1291ab69d1ed2daac3296c5dc4996deae6e5c72d6a62c88f825aa1485b1086c29c221397c3871968 WHIRLPOOL ec2d63679e376e1bffd3731b401fbac8f3773352708629d4c4bd092ba4a1c63ae4be03bf75038422e5be14e3836bda461dddbaa7c49b4e5946a81679b554302d
+EBUILD gitlab-ce-9.0.12.ebuild 13146 SHA256 a03536496c885dc158c322031b52adbcd632a32848e2526efa8169b4c6780808 SHA512 79b7f6b0c2b9e98010a64c73511d0048faad71beb7f70175de2c6bd5789ccd8de5e8ce4d9e1dfcf157a86d4ec01427acb464a3e0db09f671599df3fa5d139506 WHIRLPOOL 94dd08695e48e8c67d9e40aa0f6039ece9221dfceadfe92f63d21f9a2f334ed797efb1d94785a30c858b34a2b5b107651682e9d2fd250452c6470be2a1c42da8
+EBUILD gitlab-ce-9.1.9.ebuild 13302 SHA256 af2cfbb4467df953130838b674e9f726e82e49fe168f4d3f5e335a2e8bf84b30 SHA512 a63a89c13a2ac01a9d46efae4df5612282abc44cd772918c6f659eeabe2bee9a2e663806b5d91633a5a81cf35b19078041b52505f5ebe8712f740f6a8de0a793 WHIRLPOOL 80504ca4cf2eb5e7b23220eacc03f39b75c531a728e445e2d6c5fd6427d9c779caeca0d97b022c68d3e3d3ad4f25db50e2e4de98a45d55060dd695039897294a
+EBUILD gitlab-ce-9.2.9.ebuild 13047 SHA256 e017d121d90fe7364f8a80e24c17029e8a893e1e5658e112cc6b917658d49279 SHA512 75a0709c19e534336bdaa7ad29d5dbba0e82ca122740f22580045ee0a3e7c5a62124e430f5e9b7a98d12b45f1eda01ca3ebc39c513b9a4a17e10fc8ed3da7263 WHIRLPOOL 73aba86952f86dad27129141371ec5cdc681e9f51d9b2025bb79f913b96ec68d97a2a09acbd34c8e7f85ef23b99c1b64c2fb8da53096ba55a7a03e957e6c0f98
+EBUILD gitlab-ce-9.3.9.ebuild 13706 SHA256 3f1afaf7e10ef38603037bda1e1fff099c042e7475d28516a8940c356e6d8fd0 SHA512 7960b60175c673ee74f98c26a4f86b07d551ca3c3fd9bdf8c40d9ce17c9aa9fcadd1b6d6dbc34e2c124fd60d4532cb4e76bc9d25fd58b7a78fbcae3d3582a61d WHIRLPOOL 2ed995890e9ffc5082ed095ad7ce40dfdc0f2bc412757253c224be3752d1980329a6538950a09b9994c0bcc6e00273d58a086e0c505b5c96964791ba423a33c8
 EBUILD gitlab-ce-9.4.0.ebuild 13533 SHA256 e73704941750b2169481fd187dd54671d626e6cf665b2fe4cdc7e5cfa95fcb56 SHA512 7c8a6ee161e2088773a09d55afa7b6c7bd92890b2ed69a368119cb2afc593e7ebf7e2b009291422dddc00e0d0beaaf39e6085fb0cd3dee7f4d1c30b8071cfa4d WHIRLPOOL c41a90adc829ab7dec3dd77065227384cc782246bd539d69f7d39a870fda7cf1bceb3914c18baf16dbef920fa1c5e03950db931ff218fc77dd3db9c881ea7df4
 EBUILD gitlab-ce-9.4.0_rc6.ebuild 13515 SHA256 55d3f521d4b54ae3a8e1730e603cc3699a957bb037d7bb402984c27b68e3ba50 SHA512 b47acf7328fc7396bf4e33b5e5fd147e20a5b4d0ea115518ad3492cac3e8d65e861e3ab961e73779d0bee82a5c08ca04a355e4c547c4504d5881d81f182ba6e4 WHIRLPOOL 47547b6d7368a086aa474cad44a304936a06615406c9c72d899677c2742596a991d9b2e4cb4f7a65a1011db2966b7f21ff0901004e00e4f96cbae8b28018e3bb
 EBUILD gitlab-ce-9999.ebuild 13475 SHA256 ae6496c7a3fd61c484fed4822631005348ab5d9c05df61ef927ae797753e83c6 SHA512 79f6b2457187f95a52cddcd67643c9b6d4ca72a4f4e52f34849786ff8ac9be32b771504f6cdd7dbaf5de5f77869db75812ff4ea3aeaf2abbdc874e755b627d99 WHIRLPOOL 2fbd6ea7b1013128416c511f2d4eb4f08e087046a8c3dfe60c5b3d5b7ac521d86ab33dba9a62e5bd10b4f5ef0e1d9d3a8cac43a189dca018c6ddb734806d8a76
-MISC ChangeLog 22144 SHA256 eba6ec85e1ae3bfebaf7ca83e838f96d079292df206f55d519dd28a8ede3151b SHA512 2fc8df1c2e72996265597e289853c724ef4e2ea7a16fe299fa9f63f0eda2f4463056d53eb5c57aab463425aea141e6c5aa37ae3cc834084d0cca52dac4659de4 WHIRLPOOL 3f718a89224caf7ce158f0496cb0439e336fe90682a56b67627a1fb038f33be5f56094bbec33d6f934a03c031a4a9de69d6fa5ec15647a381b5f694e103d2569
+MISC ChangeLog 22437 SHA256 452c95fa6e0020a7c5b6c3cd0304a77171643049f347f016bac7780d7311d727 SHA512 0345a6592a09ca3873a27b65d07ff3ebe22cb7b2fdac3c10ce30b4be0af10253c23ee30cabaa6f39a08f88c8d16e7df0d714b8b5b36fb5d19dac4151d477be74 WHIRLPOOL 1aeed870a4ef66e760c2acd2bfaadc37cff872f0aefbcf90c971ec93e2ab984b50cadf20b2267ec4dec20fee73921793992e56007c3c9918b8618a59c8e455e6
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
